[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "control_lyapunov"
version = "0.1.0"
authors = [
    {name = "Vrushabh Zinage", email = "vrushabh@example.com"},
    {name = "Shrenik Zinage", email = "shrenik@example.com"},
]
description = "A data-driven framework for synthesizing feedback controllers using learned Control Lyapunov Functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.8.0",
    "numpy>=1.19.0",
    "scipy>=1.6.0",
    "sympy>=1.7.0",
    "matplotlib>=3.3.0",
]

[project.urls]
"Homepage" = "https://github.com/Vrushabh27/control_lyapunov"
"Bug Tracker" = "https://github.com/Vrushabh27/control_lyapunov/issues" 